--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
 <script src="js/acciones.js"></script>
-<script src="phonegap.js" type="text/javascript"></script><!--Script para imagenes de sustitución-->
+<script src="phonegap.js" type="text/javascript"></script>
+
+<!--Script para imagenes de sustitución-->
 <script type="text/javascript">
 function MM_swapImgRestore() { //v3.0
   var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
