--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ function MM_swapImage() { //v3.0
   </div>
   <br>
   <div align="center">
-  <p><a href="http://www.5demayopuebla.mx/historia.php"><img src="imagenes/link.gif" width="60%" height="40%" alt="imagen desierto" /></a></p>
+  <p><a href="http://www.5demayopuebla.mx/historia.php"><img src="imagenes/link.jpg" width="50%" height="30%" alt="imagen desierto" /></a></p>
   </div>
  </div>
  <div data-role="footer" align="center" data-theme="a">
