--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@ function MM_swapImage() { //v3.0
   <div>
    <h4>Aplicación Siete</h4>
    <div>
-    <img src="../aplicacion7/res/android/gun.png" width="46" height="46">
+    <img src="res/android/gun.png" width="46" height="46">
    </div>
     <h4>Itzel Noemí Maya Muciño</h4>
   </div>
+ </div>
  </div>
 </div> <!--cierra div de data-role1-->
  
@@ -199,7 +200,7 @@ function MM_swapImage() { //v3.0
    <div data-role="content" align="center">
     <div>
     <!-- Start WOWSlider.com -->
-    <iframe src="visor/wowslider.html" style="width:640px;height:296px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+    <iframe src="visor/wowslider.html" style="width:640px;height:250px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
     <!-- End WOWSlider.com -->
     </div>
     </div>
