--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@ function MM_swapImage() { //v3.0
    <div data-role="content" align="center">
     <div>
     <!-- Start WOWSlider.com -->
+    <iframe src="visor/wowslider.html" style="width:640px;height:230px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
     <!-- End WOWSlider.com -->
     </div>
     </div>
